--- a/tracking.html
+++ b/tracking.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="tracking.css">
 </head>
 <body style="background-color: burlywood;" >
-<h2><center> Expence Tracker</center></h2>
+<h2><center> Expense Tracker</center></h2>
 <ol>
    <p> <form action="" id="expenceInput">Expence Name:<input type="text"></input></form></p>
    <p>  <form action="" id="amountInput">Amount Name:<input type="text"></input></form></p> 
@@ -42,4 +42,5 @@
 
 
 </body>
+
 </html>
