--- a/tracking.html
+++ b/tracking.html
@@ -9,8 +9,8 @@
 <body style="background-color: burlywood;" >
 <h2><center> Expense Tracker</center></h2>
 <ol>
-   <p> <form action="" id="expenceInput">Expence Name:<input type="text"></input></form></p>
-   <p>  <form action="" id="amountInput">Amount Name:<input type="text"></input></form></p> 
+   <p> <form action="" id="expenceInput">Expense Name:<input type="text"></input></form></p>
+   <p>  <form action="" id="amountInput">Amount:<input type="text"></input></form></p> 
 
 </ol>
     
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
