--- a/emma.html
+++ b/emma.html
@@ -16,7 +16,7 @@
       <input type="text" id="amount" name="amount"><br><br>
 
             <button type="submit">Add Expense</button><br><br>
-            <span id="amountError" style="color: red;"></span>
+            <!-- <span id="amountError" style="color: red;"></span> -->
         </form>
         
         <table id="expenseTable">
@@ -48,4 +48,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
