Add total input field to expense tracker
Added a total input field to the expense tracker form.

--- a/tracking.html
+++ b/tracking.html
@@ -54,8 +54,11 @@
 
 <br><button type="submit">Add Expense</button>
 <br><p><button style="background-color: green;">Calculate</button></p>
+     <p> <form action="" id="expenceInput">Total:<input type="text"></input></form></p>
+  
 </body>
 
 </html>
+
 
 
