Modify tracking.html with new table structure
Updated table headers and added sample data.

--- a/tracking.html
+++ b/tracking.html
@@ -16,14 +16,14 @@
     
  <br><table border="1" cellpadding="5" cellspacing="0" width="100%">
     <tr>
-        <th>Header 1</th>
-        <th>Header 2</th>
-        <th>Header 3</th>
+        <th>Items</th>
+        <th>Price</th>
+        <th>Quantity</th>
 </tr>
 <tr>
- <td>Cell 1</td>
- <td>Cell 2</td>
- <td>Cell 3</td>
+ <td>Computers</td>
+ <td>Items</td>
+ <td>Air Conditios</td>
 </tr>
 
 <tr>
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
